[package]
name = "nacos-toolkit"
version = "0.1.1"
edition = "2021"
description = "Nacos configuration parsing and management toolkit (Rust port of nacos-toolkit)"
license = "MIT"
repository = "https://github.com/rickyshin93/nacos-toolkit-rs"
readme = "README.md"
keywords = ["nacos", "config", "configuration", "template", "yaml"]
categories = ["config"]

[lib]
name = "nacos_toolkit"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
regex = "1"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
thiserror = "1"
async-trait = "0.1"
nacos_rust_client = "0.3.3"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "test-util"] }
